DevOrg/force-app/main/default/objects/Account/fields/Create_contact__c.field-meta.xml
<CustomField>
    <fullName>Create_contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>when it is marked as true it will create one contact with the same name and phone.</description>
    <label>Create contact</label>
    <type>Checkbox</type>
</CustomField>