DevOrg/force-app/main/default/objects/Account/fields/Latest_case_Inserted__c.field-meta.xml
<CustomField>
    <fullName>Latest_case_Inserted__c</fullName>
    <description>this will show the latest case inserted</description>
    <label>Latest case Inserted</label>
    <length>18</length>
    <type>Text</type>
</CustomField>