DevOrg/force-app/main/default/objects/Account/fields/OpportunityCount__c.field-meta.xml
<CustomField>
    <fullName>OpportunityCount__c</fullName>
    <label>OpportunityCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>