DevOrg/force-app/main/default/objects/Account/fields/PrimaryContact__c.field-meta.xml
<CustomField>
    <fullName>PrimaryContact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PrimaryContact</label>
    <type>Checkbox</type>
</CustomField>