DevOrg/force-app/main/default/objects/Account/fields/Total_Opp_Sum__c.field-meta.xml
<CustomField>
    <fullName>Total_Opp_Sum__c</fullName>
    <description>It will calculate the total sum of opportunities on the account.</description>
    <label>Total Opp Sum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>